# TicTacToeEngine

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt  demo.cpp
include/: board.hpp  parser.hpp  solver.hpp
src/: board.cpp  main.cpp  parser.cpp  solver.cpp
test/: BoardTest.cpp  CMakeLists.txt  SolverTest.cpp  parserTest.cpp
